# reviewpilot-ai-pr-review

./: .gitignore  CLAUDE.md  README.md  dev_log.md  pyproject.toml
examples/: .gitkeep  auth_change.diff  migration_change.diff  safe_docs_change.diff  source_with_tests.diff
reports/: .gitkeep  sample_report.md
reviewpilot/: __init__.py  __main__.py  ai_client.py  classifier.py  cli.py  models.py  parser.py  renderer.py  report_builder.py  risk_scorer.py
submission/: DriveNets_AI_Project_Report.md  DriveNets_AI_Project_Report_Ilay_Romi.md  DriveNets_AI_Project_Report_Ilay_Romi_FINAL_v2.md  DriveNets_AI_Project_Report_concise.md
tests/: __init__.py  test_ai_client.py  test_classifier.py  test_cli.py  test_models.py  test_parser.py  test_renderer.py  test_report_builder.py  test_risk_scorer.py  test_smoke.py
tests/fixtures/: .gitkeep
